@startuml

class Prestamo {
  - estudiante : Estudiante
  - libro : Libro
  - fecha : LocalDateTime
  + Prestamo(estudiante : Estudiante, libro : Libro)
  + getEstudiante() : Estudiante
  + setEstudiante(estudiante : Estudiante) : void
  + getLibro() : Libro
  + setLibro(libro : Libro) : void
  + getFecha() : LocalDateTime
  + setFecha(fecha : LocalDateTime) : void
  + toString() : String
}

class Libro {
  - {static} ID_NOMBRE : String
  - {static} cantidadLibros : int
  - {static} librosDisponibles : int
  - titulo : String
  - autor : String
  - id : String
  - disponible : boolean
  - estudiantePrestado : Estudiante
  - editorial : Editorial
  + Libro(titulo : String, autor : String, editorial : Editorial)
  - calcularId() : String
  + prestar(estudiante : Estudiante) : Prestamo
  + devolver() : void
  + estaDisponible() : boolean
  + {static} getCantidadLibros() : int
  + {static} getLibrosDisponibles() : int
  + getEstudiantePrestado() : Estudiante
  + setEstudiantePrestado(estudiantePrestado : Estudiante) : void
  + getTitulo() : String
  + setTitulo(titulo : String) : void
  + getEditorial() : Editorial
  + setEditorial(editorial : Editorial) : void
  + getAutor() : String
  + setAutor(autor : String) : void
  + getId() : String
  + isDisponible() : boolean
  + setDisponible(disponible : boolean) : void
  + toString() : String
}

class Estudiante {
  - {static} contadorEstudiantes : int
  - {static} CORREO_FORMAT : String
  - nombre : String
  - curso : String
  - nia : int
  - email : String
  - libro : Libro
  + Estudiante(nombre : String, curso : String, email : String)
  + Estudiante(nombre : String)
  + {static} obtenerTotalEstudiantes() : int
  + {static} validarCorreo(email : String) : boolean
  + getLibro() : Libro
  + setLibro(libro : Libro) : void
  + getNombre() : String
  + setNombre(nombre : String) : void
  + getCurso() : String
  + setCurso(curso : String) : void
  + getNia() : int
  + setNia(nia : int) : void
  + getEmail() : String
  + setEmail(email : String) : void
  + toString() : String
}
Estudiante "1"-- "*" Libro: listaLibros
Libro -- Editorial
Prestamo o--> Estudiante
Prestamo o--> Libro



@enduml